# rmqrcode-python

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  example.py  make_qr.py  pyproject.toml  setup.cfg
.github/workflows/: python-app.yml  python-publish.yml
rmqr/: __init__.py  qr_image.py  rmqr.py
rmqr/enums/: color.py
rmqr/format/: alignment_pattern_coordinates.py  mask.py  qr_versions.py
rmqr/lib/: galois_fields.py  utilities.py
rmqrcode/: __init__.py  rmqrcode.py
rmqrcode/format/: data_capacities.py  qr_versions.py
src/: error_correction.py  galois_fields.py  make_qr.py  mask.py  qr_image.py  qr_versions.py  rmqr.py  utilities.py
src/encoder/: byte_encoder.py
src/enums/: error_collection_level.py  generator_polynomials.py
src/rmqr/: __init__.py  data_capacities.py  qr_versions.py  rmqr.py
src/rmqrcode/: __init__.py  console.py  errors.py  qr_image.py  rmqrcode.py  segments.py
src/rmqrcode/encoder/: __init__.py  alphanumeric_encoder.py  bare_byte_encoder.py  byte_encoder.py  encoder_base.py  kanji_encoder.py  numeric_encoder.py
src/rmqrcode/enums/: color.py  fit_strategy.py
src/rmqrcode/format/: alignment_pattern_coordinates.py  data_capacities.py  error_correction_level.py  generator_polynomials.py  mask.py  rmqr_versions.py
src/rmqrcode/lib/: error_correction.py
src/rmqrcode/util/: error_correction.py  galois_fields.py  utilities.py
tests/: numeric_encoder_test.py  rmqrcode_test.py  segments_test.py
tests/encoder/: alphanumeric_encoder_test.py  byte_encoder_test.py  kanji_encoder_test.py  numeric_encoder_test.py
