[metadata]
name = rmqrcode
version = 0.0.1
author = Takahiro Tomita
author_email = ttp8101@gmail.com
description = An rMQR Code Generetor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OUDON/rmqrcode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = rmqrcode
packages = find:
python_requires = >=3.6

[options.packages.find]
where = rmqrcode