[metadata]
name = rmqrcode
version = 0.3.3
author = Takahiro Tomita
author_email = ttp8101@gmail.com
description = An rMQR Code Generetor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/OUDON/rmqrcode
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    Pillow

[options.extras_require]
dev =
    pytest
    flake8
    isort
    black

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rmqr = rmqrcode.console:main

[flake8]
max-line-length = 119
extend-ignore = E203
exclude = src/rmqrcode/format/generator_polynomials.py

[isort]
profile=black
